# web

./: .gitignore  README.md  TODO.md  amplify.yml
.devcontainer/: devcontainer.json
cdk/: app.py  cdk.context.json  cdk.json  pyproject.toml  requirements.txt
cdk/cloudbend/: contact.py  hosting.py  stack.py
cdk/cloudbend/functions/contact_email/: app.py  pyproject.toml
cdk/cloudbend/functions/contact_email/templates/: __init__.py  contact.html
cdk/cloudbend/services/: contact.py
cloudbend/: package.json
next/: package-lock.json  package.json
next/app/: layout.tsx  page.tsx
next/app/components/: contact.tsx  modal.tsx
scripts/: setup.sh
