[project]
name = "cloudbend"
version = "0.0.1"
authors = [
  {name = "Josh Wiley", email = "josh@cloudbend.dev"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "aws-cdk-lib == 2.173.4",
    "aws-cdk.aws-amplify-alpha == 2.173.4a0",
    "aws-cdk-aws-lambda-python-alpha == 2.173.4a0",
    "constructs == 10.4.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"